--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,8 @@ body {
   font-size: 16px;
   font-weight: 400;
   line-height: 1.7;
-  position: relative; }
+  position: relative;
+  background-color: #777; }
 
 .header {
   position: fixed;
@@ -126,7 +127,7 @@ body {
     border: none;
     cursor: pointer; }
   .header ul .nav__button--a {
-    color: white;
+    color: #fff;
     margin-left: 0px;
     padding: 15px 30px 10px 30px; }
   .header ul .nav__button--a:hover {
