--- a/sass/main.css
+++ b/sass/main.css
@@ -12,6 +12,7 @@ body {
   font-weight: 400;
   line-height: 1.7;
   position: relative;
+  background-color: #777;
 }
 
 .header {
@@ -148,7 +149,7 @@ body {
     cursor: pointer;
   }
   .header ul .nav__button--a {
-    color: white;
+    color: #fff;
     margin-left: 0px;
     padding: 15px 30px 10px 30px;
   }
