--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,6 +3,10 @@ $color-light-1:  #e1dfd0;
 $color-light-2: #bab491;
 $color-medium: #6e6745;
 $color-dark: #2f2c1e;
+$color-grey-dark: #777;
+$color-white: #fff;
+
+
 
 
 
@@ -23,16 +27,17 @@ body {
     font-weight: 400;
     line-height: 1.7;
     position: relative;
+    background-color: $color-grey-dark;
+
 } 
 
 .header {
     position: fixed;
     width: 100%;
     z-index: 100;
-    background: #fff;
+    background: $color-white;
     backface-visibility: hidden;
 }
-
 
 
 /* SVG logo style*/
@@ -167,7 +172,7 @@ body {
     }
 
     .header ul .nav__button--a {
-        color: white;
+        color: $color-white;
         margin-left: 0px;
         padding: 15px 30px 10px 30px;
 
@@ -274,7 +279,7 @@ body {
 
 .btn--medium {
     background-color:#6e6745;
-    color: #fff;
+    color: $color-white;
 }
 
 
