--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,10 +1,18 @@
-/*COLORS SASS VARIABLES*/
-$color-light-1:  #e1dfd0;
-$color-light-2: #bab491;
-$color-medium: #6e6745;
-$color-dark: #2f2c1e;
-$color-grey-dark: #777;
-$color-white: #fff;
+@import "abstract/functions";
+@import "abstract/mixins";
+@import "abstract/variables";
+
+@import "base/animations";
+@import "base/base";
+@import "base/typography";
+@import "base/utilities";
+
+@import "components/btn";
+@import "components/alert";
+
+@import "layout/header";
+
+@import "pages/home";
 
 
 
@@ -12,297 +20,3 @@ $color-white: #fff;
 
 
 
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-
-/*Font Families- Google Font*/
-body {
-    font-family: 'Josefin Sans', sans-serif;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 1.7;
-    position: relative;
-    background-color: $color-grey-dark;
-
-} 
-
-.header {
-    position: fixed;
-    width: 100%;
-    z-index: 100;
-    background: $color-white;
-    backface-visibility: hidden;
-
-    & ul {
-        margin: 0;
-        padding: 0;
-        list-style: none;
-        overflow: hidden;
-    }
-
-    /* HEADER style*/
-    & ul a {
-        color: $color-dark;
-        display: block;
-        padding: 20px;
-        margin-left: 25px;
-        text-decoration: none;
-        font-size: .8rem;
-    }
-
-    & ul a:hover {
-        color: rgba($color-dark, 0.6);
-    }
-}
-
-.header ul li:last-child {
- margin-top: 8px;
-}
-
-/* SVG logo style*/
-#header__logo {
-    float: left;
-    height: 120px;
-    width: auto;
-    display: block;
-    padding: 25px 40px;
-}
-
-
-/*MENU SECTION*/
-
-/*HIDDEN MENU ITEMS ON MOBILE*/
-.header .menu {
-    clear: both;
-    max-height: 0;
-    transition: max-height .2s ease-out;
-
-/*HAMBURGER MENU*/    
-    &__btn {
-        display: none;
-    }
-
-    &__btn:checked ~ .menu {
-        max-height: 320px;
-    }
-
-    &__btn:checked ~ .menu__icon .nav__icon {
-        background-color: transparent;
-    }
-
-    &__btn:checked ~ .menu__icon .nav__icon:before {
-        transform: rotate(-45deg);
-        top:0;
-    }
-
-    &__btn:checked ~ .menu__icon .nav__icon:after {
-        transform: rotate(45deg);
-        top:0;
-    }
-
-}
-
-/*HAMBURGER MENU ANIMATION*/ 
-.header .menu__icon {
-    padding: 40px 20px;
-    position: relative;
-    float: right;
-    cursor: pointer;
-
-    & .nav__icon {
-        background-color: $color-dark;
-        display: block;
-        height: 1.9px;
-        width: 20px;
-        position: relative;
-        transition: background-color .2s ease-out;
-    }
-
-    & .nav__icon:before {
-        background-color: $color-dark;
-        content: "";
-        display: block;
-        height: 90%;
-        width: 100%;
-        position: absolute;
-        transition: all .2s ease-out;
-        top: 5px;
-    }
-
-    & .nav__icon:after {
-        background-color: $color-dark;
-        display: block;
-        content: "";
-        height: 100%;
-        width: 100%;
-        position: absolute;
-        transition: all .2s ease-out;
-        top: -5px;
-    }
-
-}
-
-/*DESKTOP VERSION OF THE MENU*/ 
-@media (min-width:83.18em) { /*1331:16 =83.18em*/
-    .header li {
-        float: left;
-    }
-
-    .header li a {
-        padding: 20px 35px;
-    }
-
-    .header .menu {
-        clear: none;
-        float: right;
-        max-height: none;
-        margin-top: 25px;
-    }
-
-    .header .menu__icon {
-        display: none;
-    }
-    
-    .btn__secondary {
-        background-color: $color-dark;
-        text-transform: uppercase;
-        text-decoration: none;
-        padding: 10px 15px;
-        display: inline-block;
-        margin-left: 25px;
-        border: none;
-        cursor: pointer;
-    }
-    
-    .btn__secondary--nav {
-        padding: 0px;
-        margin-top: 0px;
-        margin-right: 40px;
-
-        & .btn__secondary--nav--a {
-            color: $color-white;
-            margin-left: 0px;
-            padding: 10px 25px;
-            
-            // padding: 15px 30px 10px 30px;
-        }
-
-        & .btn__secondary--nav--a:hover  {
-            color: $color-light-1;
-        }
-    }
-}
-/*MENU SECTION ENDS*/
-
-/*HERO section*/
-.hero {
-    height: 90vh;
-    background-image: url(../img/hero-image-large.jpg);
-    background-size: cover;
-    background-position: center;
-
-    &__text-box {
-        position: absolute;
-        z-index: 4;
-        top: 55%;
-        left: 55%;
-        transform: translate(-50%, -50%);
-        text-align: center;
-    }
-}
-
-.hero__heading-primary {
-    color: $color-dark;
-    text-transform: uppercase;
-    font-size: 2.5rem;
-    font-weight: 400;
-    margin-bottom: 30px;
-    backface-visibility: hidden;
-
-    animation-name: moveInLeft;
-    animation-duration: 1s;
-    animation-timing-function: ease-out;
-
-    /* animation-iteration-count: 2; */
-    /* animation-delay: 2s; */
-}
-
-
-/*ANIMATIONS*/
-
-/*Move heading-primary to left*/
-@keyframes moveInLeft {
-    0% {
-        opacity: 0;
-        transform: translateX(-80px);
-    }
-
-    80% {
-    transform: translateX(5px);
-    }
-
-    100% {
-        opacity: 1;
-        transform: translateX(0);
-    }
-}
-
-/*Move button-primary to rigth*/
-@keyframes moveInRight {
-    0% {
-        opacity: 0;
-        transform: translateX(80px);
-    }
-
-    80% {
-    transform: translateX(-5px);
-    }
-
-    100% {
-        opacity: 1;
-        transform: translateX(0);
-    }
-}
-
-.btn__primary {
-    &:link,
-    &:visited {
-        text-transform: uppercase;
-        text-decoration: none;
-        padding: 15px 30px;
-        display: inline-block;
-        transition: all .2s;
-
-        animation: moveInRight 1s ease-out;
-    }
-
-    &:hover {
-        transform: translateY(-3px);
-        box-shadow: 0 10px 20px rgba($color-dark, 0.2);
-    }
-
-    &:active {
-        transform: translateY(-1px);
-        box-shadow: 0 5px 10px rgba($color-dark, 0.2);
-        color: $color-light-1;
-    }
-
-    &--medium {
-        background-color:$color-medium;
-        color: $color-white;
-    }
-
-}
-
-
-/* Wrapper helps to create consistent, centered content.*/
-/* .wrapper {
-    max-width: 50%;
-    margin-left: auto;
-    margin-right: auto;
-} */
