--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -19,9 +19,9 @@ body {
     background-color: $color-white;
 } 
 
-.main {
-    position: absolute;
-}
+// .main {
+//     position: absolute;
+// }
 
 /* Wrapper helps to create consistent, centered content.*/
  .wrapper {
