--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -1,3 +1,12 @@
+/***TOP MARGINS***/
 .u-margin__top--small {
-    margin-top: 1.5rem;
+    margin-top: 1rem;
+}
+
+.u-margin__top--medium {
+    margin-top: 2.5rem;
+}
+
+.u-margin__top--large {
+    margin-top: 3.5rem;
 }
