--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -5,6 +5,7 @@
     background-image: url(../img/hero-image-large.jpg);
     background-size: cover;
     background-position: center;
+    position: relative;
 
     &__text-box {
         position: absolute;
@@ -48,7 +49,17 @@
     }
 }
 
+.featured__container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
 
+.featured__item {
+    padding: 3rem;
+    box-sizing: border-box;
+    flex-basis: 45%;
+}
 
 
 
