--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -10,3 +10,16 @@
 .u-margin__top--large {
     margin-top: 3.5rem;
 }
+
+/***BOTTOM MARGINS***/
+.u-margin__bottom--small {
+    margin-bottom: 1rem;
+}
+
+.u-margin__bottom--medium {
+    margin-bottom: 2.5rem;
+}
+
+.u-margin__bottom--large {
+    margin-bottom: 3.5rem;
+}
