--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -4,6 +4,7 @@
     z-index: 100;
     background: $color-white;
     backface-visibility: hidden;
+    box-shadow: 0 1.5rem 4rem rgba(0,0,0,0.15);
 
     & ul {
         margin: 0;
