--- a/sass/components/_featured.scss
+++ b/sass/components/_featured.scss
@@ -27,7 +27,7 @@
     .featured {
         display: flex;
         align-items: center;
-        justify-content: space-around;
+        justify-content: center;
 
         &__item {
             padding: 3rem;
