--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,8 +10,11 @@
 @import "components/btn";
 @import "components/alert";
 @import "components/featured";
+@import "components/contact";
 
 @import "layout/header";
+@import "layout/footer";
+
 
 @import "pages/home";
 
